<resources>
    <string name="app_name">CALCULATOR</string>
    <string name="one" />
    <string name="two" />
    <string name="three" />
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="zero">)</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiplication">*</string>
    <string name="answer">ANS</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Zero">0</string>
    <string name="clear" />
    <string name="Clear">CLEAR</string>
</resources>
